# Danuel

./: .gitignore  Cargo.toml  README.md
core-engine/: Cargo.toml
core-engine/src/: character.rs  class.rs  context.rs  core_engine.rs  direction.rs  error.rs  fixture.rs  item.rs  lib.rs  mob.rs  npc.rs  player.rs  position.rs  renderer.rs  tile.rs  traits.rs  world.rs
core-engine/src/character/: mob.rs  mod.rs  player.rs
core-engine/src/environment/: fixture.rs  tile.rs
engine/: Cargo.toml
engine/src/: count.rs  error.rs  id.rs  lib.rs  life_cycle.rs  mob.rs  quest.rs  traits.rs  version.rs  world.rs
engine/src/character/: character_id.rs  class.rs  mod.rs  npc.rs  player.rs  stat.rs
engine/src/character/mob/: mob_builder.rs  mod.rs
engine/src/character/npc/: builder.rs  mod.rs
engine/src/character/player/: mod.rs  player_builder.rs
engine/src/environment/: mod.rs
engine/src/item/: item_builder.rs  item_id.rs  item_kind.rs  mod.rs
engine/src/position/: mod.rs  position.rs  positioned.rs  scalar.rs
engine/src/user_interface/: mod.rs  reward.rs
platform-web/: Cargo.toml
platform-web/src/: lib.rs
