[package]
name = "platform-web"
version = "0.1.0"
authors = ["Danuel <public.danuel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.6", optional = true }
core-engine = { path = "../core-engine" }
